# ros2_pluginlib

./: README.md
base_plugin/: CMakeLists.txt  package.xml
base_plugin/config/: params.yaml
base_plugin/include/base_plugin/: base_plugin.hpp  plugin_loader.hpp  user_plugin.hpp
base_plugin/launch/: start.launch.py
base_plugin/src/: plugin_loader.cpp  plugin_loader_node.cpp
feature_one_plugin/: CMakeLists.txt  package.xml  plugins.xml
feature_one_plugin/include/feature_one_plugin/: feature_one_plugin.hpp
feature_one_plugin/src/: feature_one_plugin.cpp
feature_two_plugin/: CMakeLists.txt  package.xml  plugins.xml
feature_two_plugin/include/feature_two_plugin/: feature_two_plugin.hpp
feature_two_plugin/src/: feature_two_plugin.cpp
